@@ -1,3 +1,8 @@
+2000-08-04  Olaf Bachmann  <obachman@mathematik.uni-kl.de>
+
+	* ffops.cc: initialize ff_prime to 0, so that first call to
+	ff_setprime always initializes ff_invtab.
+
 Tue Feb 16 19:00:03 1999  Jens Schmidt  <schmidt@mathematik.uni-kl.de>
 
 	* GNUmakefile.in (basefactorysrc): `imm.cc' added
